Add getStakerDeposits endpoint to openApi
